# devris

c++/: .gitignore  CMakeLists.txt
c++/include/: board.h  game.h  input.h  piece.h  pieces.h  renderer.h
c++/src/: board.cpp  game.cpp  input.cpp  main.cpp  piece.cpp  renderer.cpp
